--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -13,8 +13,7 @@
         android:id="@+id/txt_name"
         android:layout_width="315dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="34dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="21dp"
         android:background="@color/cardview_shadow_end_color"
         android:foregroundGravity="fill_horizontal"
         android:gravity="center"
@@ -23,28 +22,29 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/txt_timer"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ScoreView" />
 
     <TextView
         android:id="@+id/txt_timer"
-        android:layout_width="0dp"
+        android:layout_width="265dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="73dp"
-        android:layout_marginEnd="73dp"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="325dp"
         android:gravity="center"
         android:textColor="@color/primaryTextColor"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/gridLayout_gameActive"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_name" />
 
     <TextView
         android:id="@+id/ScoreView"
         android:layout_width="0dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="50dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/primaryDarkColor"
         android:gravity="center"
         android:text="Score"
@@ -52,8 +52,7 @@
         app:layout_constraintBottom_toTopOf="@+id/txt_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/stop_button"
@@ -63,32 +62,32 @@
         android:text="End Game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/gridLayout_gameActive"
-        app:layout_constraintStart_toStartOf="@+id/gridLayout_gameActive" />
+        app:layout_constraintStart_toStartOf="@+id/gridLayout_gameActive"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout_gameActive" />
 
     <GridLayout
         android:id="@+id/gridLayout_gameActive"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="0dp"
         android:foregroundGravity="clip_horizontal|center|fill_vertical|center_horizontal"
         app:layout_constraintBottom_toTopOf="@+id/stop_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_timer">
 
     </GridLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_gameActive"
-        android:layout_width="217dp"
-        android:layout_height="161dp"
-        android:layout_marginEnd="160dp"
+        android:layout_width="403dp"
+        android:layout_height="291dp"
+        android:layout_marginTop="49dp"
         android:background="#18FFFF"
         android:foregroundGravity="clip_horizontal|center|fill_vertical|center_horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/stop_button"
-        app:layout_constraintEnd_toEndOf="@+id/ScoreView"
-        app:layout_constraintTop_toBottomOf="@+id/txt_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_timer"
         tools:listitem="@layout/activity_item_for_recyc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
